# Concordo

./: CMakeLists.txt  Doxyfile  README.md  author.md  exemplos.txt  input.txt
docs/html/: CanalTexto_8cpp.html  CanalTexto_8cpp__incl.dot  CanalTexto_8h.html  CanalTexto_8h__dep__incl.dot  CanalTexto_8h__incl.dot  CanalTexto_8h_source.html  CanalVoz_8cpp.html  CanalVoz_8cpp__incl.dot  CanalVoz_8h.html  CanalVoz_8h__dep__incl.dot  CanalVoz_8h__incl.dot  CanalVoz_8h_source.html  Canal_8cpp.html  Canal_8cpp__incl.dot  Canal_8h.html  Canal_8h__dep__incl.dot  Canal_8h__incl.dot  Canal_8h_source.html  Concordo_8cpp.html  Concordo_8cpp__incl.dot  Executor_8cpp.html  Executor_8cpp__incl.dot  Executor_8h.html  Executor_8h__dep__incl.dot  Executor_8h__incl.dot  Executor_8h_source.html  Mensagem_8cpp.html  Mensagem_8cpp__incl.dot  Mensagem_8h.html  Mensagem_8h__dep__incl.dot  Mensagem_8h__incl.dot  Mensagem_8h_source.html  Servidor_8cpp.html  Servidor_8cpp__incl.dot  Servidor_8h.html  Servidor_8h__dep__incl.dot  Servidor_8h__incl.dot  Servidor_8h_source.html  Sistema_8cpp.html  Sistema_8cpp__incl.dot  (+64 more)
docs/latex/: CanalTexto_8cpp.tex  CanalTexto_8cpp.tex.tmp  CanalTexto_8cpp__incl.dot  CanalTexto_8h.tex  CanalTexto_8h__dep__incl.dot  (+57 more)
html/: md_README.html  md_author.html  pages.html
include/: Canal.h  CanalTexto.h  CanalVoz.h  Executor.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
latex/: md_README.tex  md_author.tex  refman.tex
src/: Canal.cpp  CanalTexto.cpp  CanalVoz.cpp  Concordo.cpp  Executor.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  main.cpp
(+52 files in other folders)
